Added superhero creation

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Superheroes</title>
+  <title>Superheroes App</title>
 </head>
 <body>
   {{{body}}}
