--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Superheroes App</title>
+
+  <link rel="stylesheet" href="/static/css/main.css">
 </head>
 <body>
   {{{body}}}
