--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,29 @@
   <meta charset="UTF-8">
   <title>Superheroes App</title>
 
-  <link rel="stylesheet" href="/static/css/main.css">
+  <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.css">
+  {{!--<link rel="stylesheet" href="/static/css/main.css">--}}
 </head>
 <body>
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Superheroes app</a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav">
+          <li><a href="/superheroes">Superheroes list</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
   {{{body}}}
 </body>
 </html>
