--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,7 +5,7 @@
   <title>Superheroes App</title>
 
   <link rel="stylesheet" href="/static/bower_components/bootstrap/dist/css/bootstrap.css">
-  {{!--<link rel="stylesheet" href="/static/css/main.css">--}}
+  <link rel="stylesheet" href="/static/css/theme.min.css">
 </head>
 <body>
   <nav class="navbar navbar-default">
@@ -23,6 +23,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
           <li><a href="/superheroes">Superheroes list</a></li>
+          <li><a href="/superheroes/create">Create a superhero</a></li>
         </ul>
       </div>
     </div>
