--- a/views/superhero-create.handlebars
+++ b/views/superhero-create.handlebars
@@ -1,6 +1,12 @@
 <form action="/superheroes" method="post">
-  <label for="name">Name: </label>
-  <input type="text" name="name" id="name">
-
-  <input type="submit" value="Create!">
+  <div class="form-group">
+    <div class="col-sm-5">
+      <input type="text" name="name" id="name" class="form-control" placeholder="Name">
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-20">
+      <input type="submit" value="Create!" class="btn btn-success btn-md">
+    </div>
+  </div>
 </form>
